opt: Tools